# doc_auto_mvp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
app/: CLAUDE.md  confidence_thresholds.py  logging_config.py  main.py  models.py  schema.py  settings.py  template_mapping.py
config/: document_types.json
docs/: api.md  architecture.md  testing.md
marketing/: comparison_page.html  intro_page.html  onepage_summary.html  submission_cover.html  submission_cover.template.html  submission_profile.json
samples/: README.md  public_form_variants.md  public_sample_sources.md  public_vs_generated_checklist.md  sample_cases.json
scripts/: compare_sample_reports.py  create_customer_excel_template.py  demo_run.py  evaluate_real_docs.py  evaluate_sample_cases.py  export_marketing_pdfs.py  fix_filename_encoding.py  generate_sample_pdfs.py  install_tesseract_local.ps1  merge_submission_pdfs.py  ocr_smoke_test.py  preflight_check.py  rebuild_index.py  render_submission_cover.py  verify_openai_structuring.py
templates/: customer_invoice_template.xlsx
tests/: CLAUDE.md  conftest.py  test_ai_cache.py  test_ai_e2e.py  test_ai_retry.py  test_ai_structurer.py  test_app.py  test_classifier.py  test_compare_sample_reports.py  test_error_handling.py  test_evaluate_samples.py  test_export_marketing_pdfs.py  test_exporter.py  test_exporter_dynamic.py  test_exporter_quality.py  test_exporter_template_build.py  test_extractor.py  test_merge_classifications.py  test_merge_submission_pdfs.py  test_ocr_service.py  test_pagination.py  test_quote_extraction.py  test_rate_limit.py  test_real_text_patterns.py  test_receipt_extraction.py  (+12 more)
(+23 files in other folders)
